# mplug-plugin-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  rename_plugin.py
.github/workflows/: build.yml  release.yml
cmake/: EmbedWebResource.cmake
resources/: entitlements.mac.plist
resources/web/: editor.html
src/: my_plugin.cpp  my_plugin.h  my_plugin_editor_generic.cpp  my_plugin_editor_html.h  my_plugin_editor_mac.mm  my_plugin_editor_win.cpp
